# gensilo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  std.h  testmat.cpp  testquadmesh.cpp  testvoxelmat.cpp
